WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96846
Tests failing on WK2 bots after giving fixed positioning its own stacking context
https://bugs.webkit.org/show_bug.cgi?id=96846
Summary
Tests failing on WK2 bots after giving fixed positioning its own stacking con...
Beth Dakin
Reported
2012-09-14 18:30:45 PDT
Tests are failing on the WK2 bots after this change:
https://bugs.webkit.org/show_bug.cgi?id=96688
http://trac.webkit.org/changeset/128652
They are failing because I checked in updated results that expect fixed positioning to create a stacking context. However, WebKitTestRunner does not enable ScrollingCoordinator, so the code that I added to enable stacking contexts for fixedPos is never actually running.
Attachments
Patch
(3.81 KB, patch)
2012-09-14 18:33 PDT
,
Beth Dakin
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2012-09-14 18:33:15 PDT
Created
attachment 164259
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-14 18:34:32 PDT
Attachment 164259
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/WebProcess/WebPage/DrawingAreaImpl.cpp:275: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2012-09-14 18:36:06 PDT
Comment on
attachment 164259
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=164259&action=review
r=me
> Source/WebKit2/ChangeLog:13 > + actually running. This patch moves that code to a place where is will
is => it
> Source/WebKit2/ChangeLog:14 > + run for the testing tools, which matches the match for WK1.
"the match for"
Beth Dakin
Comment 4
2012-09-14 18:38:01 PDT
Thank you! I fixed the typos and style problem:
http://trac.webkit.org/changeset/128678
Tim Horton
Comment 5
2012-09-15 01:42:29 PDT
Beth, is it possible this broke the functionality of
http://trac.webkit.org/changeset/128652
? I see layers for position: fixed stuff on Google+ between 128652 and this patch, but not afterwards...
Alexey Proskuryakov
Comment 6
2012-09-17 12:52:27 PDT
This appears to have made other tests fail,
bug 96945
. Unlike what Tim is seeing, there are extra layers on the tests.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug